SERVER-48152 renameCollectionAndDropTarget() should check for background operations before calling preRenameCollection()

(cherry picked from commit c4c5768798b72027a7b40eb0bbf4455f7e9564b9)